# mp4terminal

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
mp_terminal/: main.py  terminal_player.py  video_meta.py
src/: main.rs
tests/: test_all.py
