[tool.poetry]
name = "mp4terminal"
version = "0.1.0"
description = ""
authors = ["goDeni <den4ikept11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.7.0.72"
colorama = "^0.4.6"
pillow = "^9.5.0"
cursor = "^1.3.5"
ffmpeg-python = "^0.2.0"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
